tdf#91127 - audit for unfortunate SAL_NO_ACQUIRE referencing issues.

Change-Id: I738f3ea1bf9f003f2b146cda0a8f986375eacd2b